build: current state
footer works with build generated meta data instead of runtime generated
renamed Specialties to use American English
I think I got all the links and references to them
rehomed Specialties under the Reference section
this required creating a markdown page for both
/Reference and /Reference/Specialties
